Add comments and fix indentation for core

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 <section>
+    <!-- This section has the intro information for Inked Clippers which has a image of a barber pole and a image of Ennis Town
+        -->
     <div class="container-fluid p-md-5 p-1">
         <div class="row">
             <div class="col-md-6 fs-4">
@@ -58,6 +60,8 @@
     </div>
 </section>
 <section>
+    <!--This section is for the history of Inked Clippers & information about the atmosphere of the shop it has two photos of the barbershop.
+        -->
     <div class="container-fluid p-md-5 p-1">
         <div class="row">
             <div class="col-md-6 fs-4">
