--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<!-- This section is for the services of the barbershop displayed as a table
+        -->
 <section class="container-fluid mb-5">
     <div class="row">
         <div class="col-12 blk-bkround">
@@ -28,6 +30,8 @@
     </div>
 </section>
 
+<!-- This section is for the barbershop employees it has there name, image, nickname/role and a bio with some information about them
+        -->
 <section>
     <div class="container-fluid">
         <div class="row bg-dark">
