--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<!-- Home page callout 
+    -->
 <div class="call-out">
     <div class="container-fluid image-container">
         <div class="darken-image"></div>
@@ -16,9 +18,7 @@
         </div>
     </div>
 </div>
-
 <!--Testimonials-->
-
 <section>
     <h3 class="text-center text-white mt-3" id="Testimonials">Testimonials</h3>
     <hr class="text-white">
@@ -53,7 +53,6 @@
 
     </div>
 </section>
-
 <!--Location-->
 <section>
     <div class="container-fluid mb-5">
