--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<!-- This section is for the first two tables of the barbershop services  
+    -->
 <section class="container-fluid mb-md-3 blk-bkround">
     <h1 class="text-white text-center mb-3">Prices for Piercing Services</h1>
     <div class="row mx-md-5">
@@ -50,6 +52,8 @@
         </div>
     </div>
 </section>
+<!-- This section is for the last two tables of the barbershop services  
+    -->
 <section class="container-fluid mb-md-3 blk-bkround">
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
@@ -96,6 +100,8 @@
         </div>
     </div>
 </section>
+<!-- This section is for the tattoo studio employees it has there name, image, nickname/role and a bio with some information about them
+        -->
 <section>
     <div class="container-fluid my-md-3">
         <div class="row">
@@ -121,7 +127,8 @@
         </div>
     </div>
 </section>
-
+<!-- This section is for the tattoo studios FAQS
+        -->
 <h2 class="text-white text-center my-4">Inked Clippers FAQ's</h2>
 <section class="container-fluid border-3 blk-bkround">
     <div class="row my-3">
