--- a/core/templates/core/usertestimonial_form.html
+++ b/core/templates/core/usertestimonial_form.html
@@ -2,25 +2,28 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-
-<div class="container bg-dark px-3 py-2 my-3d rounded d-flex justify-content-center">
-    <div id="reviews-container">
-        <div class="row">
-            <div class="col-12 d-flex justify-content-center">
-                <form method="POST">
-                    {% csrf_token %}
-                    <!--csrf token is added to give security to django forms-->
-                    <fieldset class="form-group">
-                        <legend class="mb-3 text-white">Edit your Review</legend>
-                        <!--Crispy forms-->
-                        {{ form|crispy }}
-                    </fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-outline-info my-3 text-white" type="submit">Update</button>
-                    </div>
-                </form>
+<section>
+    <!-- This section and page is for updating your testimonial
+        -->
+    <div class="container bg-dark px-3 py-2 my-3d rounded d-flex justify-content-center">
+        <div id="reviews-container">
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <!--csrf token is added to give security to django forms-->
+                        <fieldset class="form-group">
+                            <legend class="mb-3 text-white">Edit your Review</legend>
+                            <!--Crispy forms-->
+                            {{ form|crispy }}
+                        </fieldset>
+                        <div class="form-group">
+                            <button class="btn btn-outline-info my-3 text-white" type="submit">Update</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 {% endblock content %}
