--- a/core/templates/core/add_testimonial.html
+++ b/core/templates/core/add_testimonial.html
@@ -2,7 +2,8 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-
+<!-- This page and container is for site users to add there own testimonail
+        -->
 <div class="container bg-dark px-3 py-2 my-3d rounded d-flex justify-content-center">
     <div id="reviews-container">
         <div class="row">
