--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,8 +1,9 @@
 {% load static %}
-
 <!DOCTYPE html>
-
 <html lang="en">
+<!--
+    This is the base page for displaying the navbar, messages and footer across all pages
+-->
 
 <head>
     <meta charset="utf-8">
