--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,22 +2,25 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container bg-dark px-3 py-2 my-3">
-    <form method="POST">
-        {% csrf_token %}
-        <!--csrf token is added to give security to django forms-->
-        <fieldset class="form-group">
-            <legend class="mb-3 text-white">Log In</legend>
-            <!--Crispy forms-->
-            {{ form|crispy }}
-        </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info my-3 text-white" type="submit">Login</button>
-            <small class="text-white pb-3 fw-bold d-block">Create An Account? <a class="ml-2"
-                    href="{% url 'register-page' %}">Sign
-                    up</a>
-            </small>
-        </div>
-    </form>
-</div>
+<!-- This section and page is for logging into your account-->
+<section>
+    <div class="container bg-dark px-3 py-2 my-3">
+        <form method="POST">
+            {% csrf_token %}
+            <!--csrf token is added to give security to django forms-->
+            <fieldset class="form-group">
+                <legend class="mb-3 text-white">Log In</legend>
+                <!--Crispy forms-->
+                {{ form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info my-3 text-white" type="submit">Login</button>
+                <small class="text-white pb-3 fw-bold d-block">Create An Account? <a class="ml-2"
+                        href="{% url 'register-page' %}">Sign
+                        up</a>
+                </small>
+            </div>
+        </form>
+    </div>
+</section>
 {% endblock content %}
