--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -172,7 +172,7 @@
                         </button>
                     </h2>
                     <!--I am getting a error for #collapseAftercare{{ questions.id }} but its the only way I have got the FAQ's to open and close without bugs-->
-                    <div id="#collapseAftercare{{ questions.id }}" class="accordion-collapse collapse"
+                    <div id="collapseAftercare{{ questions.id }}" class="accordion-collapse collapse"
                         data-bs-parent=".accordion">
                         <div class="accordion-body">
                             <span class="text-dark">{{ questions.answer|linebreaksbr }}</span>
