--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -23,9 +23,9 @@
     <h3 class="text-center text-white mt-3" id="Testimonials">Testimonials</h3>
     <hr class="text-white">
     <div class="container-fluid my-3 p-md-5">
-        <div class="row">
-            <div class="col-12">
-                <div class="list-group me-5">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-8">
+                <div class="list-group me-5 d-flex justify-content-center">
                     <ul>
                         {% for user_testimonial in new_testimonial %}
                         <li class="list-group-item bg-dark text-white border-3">
@@ -42,14 +42,21 @@
                         {% endfor %}
                     </ul>
                 </div>
+                <div class="testimonial-btns">
+                    {% if is_paginated %}
+
+                    {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                    <a class="btn btn-black" href="?page={{ num }}#Testimonials">{{ num }}</a>
+                    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                    <a class="btn btn-white" href="?page={{ num }}#Testimonials">{{ num }}</a>
+                    {% endif %}
+                    {% endfor %}
+
+                    {% endif %}
+                </div>
             </div>
         </div>
-    </div>
-    <div class="reviews-btn">
-        {% if user.is_authenticated %}
-        <a href="{% url 'testimonial-page' %}" class="btn btn-success mb-4">Add Testimonial</a>
-        {% endif %}
-
     </div>
 </section>
 <!--Location-->
