--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -6,15 +6,16 @@
     <!-- This section has the intro information for Inked Clippers which has a image of a barber pole and a image of Ennis Town
         -->
     <div class="container-fluid p-md-5 p-1">
+        <h2 class="text-white text-center fs-2 mb-5">Welcome to Inked Clippers, where art and style
+            unite!
+        </h2>
         <div class="row">
-            <div class="col-md-6 fs-4">
-                <h2 class="text-white text-center fs-2 m-3 mt-md-1">Welcome to Inked Clippers, where art and style
-                    unite!
-                </h2>
+            <div class="col-md-6 fs-4 mt-md-2 mb-md-5">
                 <p class="text-center text-white">Established in 1965,
                     we are more than just a tattoo studio and barbershop we are a living legacy of creativity and
                     craftsmanship in Ennis. Step into our world of ink, clippers, and piercings, where hair artistry and
-                    tattoo artistry come together to create an unforgettable experience.</p>
+                    tattoo artistry come together to create an unforgettable experience.
+                </p>
 
                 <p class="text-center text-white">At Inked Clippers, we believe in the power of self-expression through
                     the
@@ -32,8 +33,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <img class="img-fluid rounded float-start" src="{% static 'images/ennis.jpg' %}" alt="Ennis Town">
+            <div class="col-md-6 mt-0">
+                <img class="img-fluid rounded float-end mb-3" src="{% static 'images/inked-clippers.jpg' %}"
+                    alt="Inside of the barbershop">
             </div>
             <div class="col-md-6 fs-4 mt-3">
                 <p class="text-center text-white">
@@ -53,8 +55,6 @@
                     remains the same: to provide an unmatched experience that leaves you inspired and transformed.
                     Join us at Inked Clippers, where passion, art, and community converge to
                     redefine self-expression, one masterpiece at a time.</p>
-                <img class="img-fluid rounded float-end mr-4" src="{% static 'images/bs-chair.webp' %}"
-                    alt="Barbershop Chair">
             </div>
         </div>
     </div>
@@ -65,91 +65,68 @@
     <div class="container-fluid p-md-5 p-1">
         <div class="row">
             <div class="col-md-6 fs-4">
-                <h3 class="text-white text-center fs-2 my-3">History Of Inked Clippers</h3>
+                <h3 class="text-white text-center fs-2">History Of Inked Clippers</h3>
                 <p class="text-white text-center">In 1965, the visionary artist Mike O'Brien founded "Clippers," a
                     modest barbershop that quickly gained a reputation for excellence in Ennis. Mike's dedication to his
                     craft and commitment to fostering meaningful connections with clients laid the groundwork for what
-                    would become our enduring legacy.</p>
-
-                <p class="text-white text-center">As the years passed, the founder's two sons, Robert and Darren,
+                    would become our enduring legacy. As the years passed, the founder's two sons, Robert and Darren,
                     embraced their artistic callings. Robert joined his father in the barbershop, adding his
                     contemporary flair to the age-old craft. Together, they created a welcoming atmosphere that made
-                    clients feel like family.</p>
-
+                    clients feel like family.
+                </p>
                 <p class="text-white text-center">Meanwhile, Darren pursued his dream of mastering tattoo artistry and
                     piercing, embarking on a global journey to learn from the world's finest artists. His experiences
-                    abroad enriched his artistry and brought fresh perspectives to the family business.</p>
-
-                <p class="text-white text-center">In the face of adversity and the passing of our beloved founder, Mike
+                    abroad enriched his artistry and brought fresh perspectives to the family business. In the face of
+                    adversity and the passing of our beloved founder, Mike
                     O'Brien, after 60 years of service, Robert assumed the reins of Clippers, ensuring the continuation
                     of our cherished legacy. In 2015, Darren returned home, ready to merge his tattooing and piercing
-                    expertise with the established barbershop, and thus, Inked Clippers was born.</p>
-
+                    expertise with the established barbershop, and thus, Inked Clippers was born.
+                </p>
                 <p class="text-white text-center">Today, our team of barbers, tattoo artists, and piercers works in
                     harmony, transforming every visit into an immersive journey of self-discovery and self-expression.
-                </p>
-
-                <p class="text-white text-center mb-5">Inked Clippers stands as a testament to the power of art to unite
+                    Inked Clippers stands as a testament to the power of art to unite
                     generations and tell stories that span decades. We honor the memory of our father, Mike O'Brien,
                     while embracing the future, welcoming clients from all walks of life into our ever-evolving family
                     in Ennis.
                 </p>
             </div>
             <div class="col-md-6">
-                <img class="img-fluid rounded float-end mb-3" src="{% static 'images/inked-clippers.jpg' %}"
-                    alt="Inside of the barbershop">
-                <img class="img-fluid rounded float-end my-5" src="{% static 'images/barbershop-celing-view.jpg' %}"
-                    alt="Inside the barbershop from a different angle">
+                <img class="img-fluid rounded float-start" src="{% static 'images/ennis.jpg' %}" alt="Ennis Town">
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <div class=" fs-4 text-center text-white">
-                    <h3 class="fs-2">Welcoming and Inclusive</h3>
+                    <h3 class="fs-2 mt-4">Welcoming and Inclusive</h3>
                     <p class="text-center text-white">
                         we take pride in creating a warm and inclusive environment that embraces diversity and
-                        individuality.
-                        Our studio is a safe space where everyone, regardless of background or identity, can feel
-                        comfortable
-                        and accepted.
-                    </p>
-                    <p>As you step through our doors, you'll immediately sense the friendly and inviting atmosphere. Our
-                        team
-                        greets each client with a smile and genuine enthusiasm, making you feel like part of our
-                        creative
-                        family
-                        from the moment you arrive.
+                        individuality.Our studio is a safe space where everyone, regardless of background or identity,
+                        can feel comfortable and accepted. As you step through our doors, you'll immediately sense the
+                        friendly and inviting
+                        atmosphere. Our team greets each client with a smile and genuine enthusiasm, making you feel
+                        like part of our
+                        creative family from the moment you arrive.
                     </p>
                     <p>We believe that self-expression should know no bounds, and our studio is a judgment-free zone
-                        where
-                        you
-                        can be your authentic self. Whether you're a tattoo enthusiast, a first-time client, or simply
-                        curious
-                        about our services, we treat each person with respect and kindness.
+                        where you can be your authentic self. Whether you're a tattoo enthusiast, a first-time client,
+                        or simply
+                        curious about our services, we treat each person with respect and kindness.
                         Our talented barbers, tattoo artists, and piercers are not just masters of their crafts; they
-                        are
-                        also
-                        skilled communicators and empathetic listeners. They take the time to understand your
-                        preferences,
-                        answer your questions, and ensure that your experience is as enjoyable as it is memorable.
+                        are also skilled communicators and empathetic listeners. They take the time to understand your
+                        preferences, answer your questions, and ensure that your experience is as enjoyable as it is
+                        memorable.
                     </p>
                     <p>Inked Clippers is committed to providing an experience that is as unique as you are. Our diverse
-                        team
-                        of
-                        artists brings a wide range of styles, backgrounds, and artistic influences to the table,
-                        ensuring
-                        that
-                        your vision is translated into a masterpiece that reflects your individuality.
-                    </p>
-                    <p>We celebrate the beauty of differences and the power of art to bring people together. Whether
-                        you're
+                        team of artists brings a wide range of styles, backgrounds, and artistic influences to the
+                        table,
+                        ensuring that your vision is translated into a masterpiece that reflects your individuality. We
+                        celebrate the
+                        beauty of differences and the power of art to bring people together. Whether you're
                         seeking a haircut that represents your personality, a tattoo that tells your life story, or a
-                        piercing
-                        that accentuates your style, we're here to support and guide you every step of the way.
+                        piercing that accentuates your style, we're here to support and guide you every step of the way.
                         Inked Clippers stands as a symbol of unity, where creativity flourishes, and the spirit of
                         self-expression thrives. Join us in celebrating the beauty of diversity, one artistic journey at
-                        a
-                        time.
+                        a time.
                     </p>
                 </div>
             </div>
