Small change to padding and removed colours

--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -6,9 +6,9 @@
         -->
 <section class="container-fluid mb-5">
     <div class="row">
-        <div class="col-12 blk-bkround">
-            <h1 class="text-white text-center my-3">Prices For Barber Services</h1>
-            <table class="table-borderless table-services text-center blk-bkround">
+        <div class="col-12 p-5">
+            <h1 class="text-white text-center my-md-3">Prices For Barber Services</h1>
+            <table class="table-borderless table-services text-center p-5">
                 <thead>
                     <tr>
                         <th scope="col">HAIR &amp; SHAVE</th>
@@ -34,7 +34,7 @@
         -->
 <section>
     <div class="container-fluid">
-        <div class="row bg-dark">
+        <div class="row">
             <div class="col-12">
                 <h2 class="text-white text-center my-5" id="meet-the-team">Meet the Barbers</h2>
             </div>
