--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- This section is for the first two tables of the barbershop services  
     -->
-<section class="container-fluid mb-md-3 blk-bkround">
+<section class="container-fluid mb-md-3">
     <h1 class="text-white text-center mb-3">Prices for Piercing Services</h1>
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
@@ -54,7 +54,7 @@
 </section>
 <!-- This section is for the last two tables of the barbershop services  
     -->
-<section class="container-fluid mb-md-3 blk-bkround">
+<section class="container-fluid mb-md-3">
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
             <table class="table-borderless table-services text-center border-bottom">
@@ -130,7 +130,7 @@
 <!-- This section is for the tattoo studios FAQS
         -->
 <h2 class="text-white text-center my-4">Inked Clippers FAQ's</h2>
-<section class="container-fluid border-3 blk-bkround">
+<section class="container-fluid border-3">
     <div class="row my-3">
         <div class="col-md-6">
             <h3 class="text-white">Questions about getting Tattoos</h3>
