--- a/static/core/main.css
+++ b/static/core/main.css
@@ -114,7 +114,7 @@ body {
 
 /* -----------------------------------------------------------------------------Tattoo page */
 
-/* .accordion-button {
+.accordion-button {
     background: #212529;
     color: white !important;
 }
@@ -147,7 +147,7 @@ body {
 .accordion-item {
     background-color: #212529;
     color: white;
-} */
+}
 
 
 /* --------------------------------------------------------------------------------Register page */
