--- a/core/templates/core/usertestimonial_confirm_delete.html
+++ b/core/templates/core/usertestimonial_confirm_delete.html
@@ -6,18 +6,26 @@
 <!-- This section and page is for making sure that you want to delete your testimonial
 -->
 <section>
-    <div class="container bg-dark px-3 py-2 my-3d">
-        <h2 class="text-white text-center">Are you sure you want to delete your testimonial?</h2>
-        <form method="POST">
-            {% csrf_token %}
-            <div class="reviews-btn">
-                <button type="submit" value="Delete Testimonial"
-                    class="btn btn-outline-danger my-4 text-white">Delete</button>
+    <div class="container px-3 py-2 my-3">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <div class="white-container">
+                    <h2 class="text-white text-center">Are you sure you want to delete your testimonial?</h2>
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="reviews-btn">
+                            <button type="submit" value="Delete Testimonial"
+                                class="btn btn-outline-danger my-2 text-white">Delete</button>
+                        </div>
+                    </form>
+                    <div class="reviews-btn">
+                        <a href="{% url 'home-page' %}" class="btn btn-outline-success my-3 text-white"
+                            type="submit">Return
+                            To Home
+                            Page</a>
+                    </div>
+                </div>
             </div>
-        </form>
-        <div class="reviews-btn">
-            <a href="{% url 'home-page' %}" class="btn btn-outline-success my-3 text-white" type="submit">Return To Home
-                Page</a>
         </div>
     </div>
 </section>
