Add fixed-top to nav to make it scroll with the content

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark">
+    <nav class="navbar navbar-expand-md bg-dark fixed-top">
         <div class="container-fluid">
             <!--Logo-->
             <a class="navbar-brand" href="{% url 'home-page' %}"><span class=" fw-bold ms-2 text-white">Inked
@@ -142,7 +142,7 @@
                         </span><a href="mailto: InkedClipers@gmail.com">InkedClippers@gmail.com</a></p>
                 </div>
             </div>
-            <div class="row bg-dark">
+            <div class="row bg-dark pt-3">
                 <div class="col d-flex justify-content-md-evenly justify-content-center fs-1">
                     <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener"><i
                             class="fa-brands fa-facebook mb-4 mx-2"></i></a>
