--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -6,7 +6,7 @@
         -->
 <section class="container-fluid mb-5">
     <div class="row">
-        <div class="col-12 p-5">
+        <div class="col-12 pt-3 px-3">
             <h1 class="text-white text-center my-md-3">Prices For Barber Services</h1>
             <table class="table-borderless table-services text-center p-5">
                 <thead>
