--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- This section is for the first two tables of the barbershop services  
     -->
-<section class="container-fluid mb-md-3">
+<section class="container-fluid mb-md-3 mt-md-3">
     <h1 class="text-white text-center mb-3 mt-2">Prices for Piercing Services</h1>
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
