--- a/static/core/main.css
+++ b/static/core/main.css
@@ -71,7 +71,7 @@ body {
 .image-container {
     height: 100dvh;
 
-    background: url(../images/haircut-1.jpg) no-repeat center fixed;
+    background: url(../images/haircut-1.webp) no-repeat center fixed;
     background-size: cover;
 
     display: flex;
