--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -6,7 +6,7 @@
         -->
 <section class="container-fluid mb-5">
     <div class="row">
-        <div class="col-12 pt-3 px-3">
+        <div class="col-12 pt-3 px-5">
             <h1 class="text-white text-center my-md-3">Prices For Barber Services</h1>
             <table class="table-borderless table-services text-center p-5">
                 <thead>
@@ -45,7 +45,7 @@
             <div class="col-md-3">
                 <div class="card border-3">
                     <div class="card-header text-center bg-dark text-white fw-bold">{{ member.name }}</div>
-                    <img src="{{ member.image.url }}" class="" alt="...">
+                    <img src="{{ member.image.url }}" class="img-fluid" alt="...">
                     <div class="card-body bg-dark">
                         <p class="text-white text-center fs-6"><u>{{ member.role }}</u></p>
                         <p class="card-text text-white fs-6 text-center">{{ member.bio }}</p>
