--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -116,7 +116,7 @@
             <div class="col-md-6">
                 <div class="card border-3 mx-md-5">
                     <div class="card-header text-center bg-dark text-white fw-bold">{{ member.name }}</div>
-                    <img src="{{ member.image.url }}" class="tattoo-team-img" alt="...">
+                    <img src="{{ member.image.url }}" class="tattoo-team-img" alt="{{ member.name }}">
                     <div class="card-body bg-dark">
                         <p class="text-white text-center fs-6"><u>{{ member.role }}</u></p>
                         <p class="card-text text-white fs-6 text-center">{{ member.bio }}</p>
