--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -15,15 +15,16 @@
                                 <img class="rounded-circle account-img" src="{{ user.profile.image.url }}"
                                     alt="User profile image">
                             </div>
-                            <div class="col-12 col-md-6">
-                                <p class="text-white account-heading">Username:<span class="text-secondary">
+                            <div class="col-12 col-md-6 text-white">
+                                <p class="text-white account-heading fw-bold">Username:<span class="text-secondary">
                                         {{ user.username }}</span>
                                 </p>
-                                <p class="text-white"> Email: <span class="text-secondary">{{ user.email }}</span></p>
-                                <p class="text-white">Phone:<span class="text-secondary">
+                                <p class="text-white fw-bold"> Email: <span
+                                        class="text-secondary">{{ user.email }}</span></p>
+                                <p class="text-white fw-bold">Phone:<span class="text-secondary">
                                         {{ user.profile.phone }}</span>
                                 </p>
-                                <p class="text-white">Location:<span class="text-secondary">
+                                <p class="text-white fw-bold">Location:<span class="text-secondary">
                                         {{ user.profile.location }}</span>
                                 </p>
                             </div>
