Add padding to about page

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -6,11 +6,11 @@
     <!-- This section has the intro information for Inked Clippers which has a image of a barber pole and a image of Ennis Town
         -->
     <div class="container-fluid p-md-5 p-1">
-        <h2 class="text-white text-center fs-2 mb-5">Welcome to Inked Clippers, where art and style
+        <h2 class="text-white text-center fs-2 mb-md-5 mt-3">Welcome to Inked Clippers, where art and style
             unite!
         </h2>
         <div class="row">
-            <div class="col-md-6 fs-4 mt-md-2 mb-md-5">
+            <div class="col-md-6 fs-4 mt-md-2 mb-md-5 p-4">
                 <p class="text-center text-white">Established in 1965,
                     we are more than just a tattoo studio and barbershop we are a living legacy of creativity and
                     craftsmanship in Ennis. Step into our world of ink, clippers, and piercings, where hair artistry and
@@ -27,7 +27,7 @@
                     or a stylish piercing to accentuate your individuality, we are here to bring your vision to life.
                 </p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 p-4">
                 <img class="img-fluid rounded float-end d-none d-md-inline" src="{% static 'images/barberpole.jpg' %}"
                     alt="Barber pole">
             </div>
@@ -37,7 +37,7 @@
                 <img class="img-fluid rounded float-end mb-3" src="{% static 'images/inked-clippers.jpg' %}"
                     alt="Inside of the barbershop">
             </div>
-            <div class="col-md-6 fs-4 mt-3">
+            <div class="col-md-6 fs-4 mt-3 p-4">
                 <p class="text-center text-white">
                     With over 50 years of heritage, Inked Clippers has a rich history of serving the community with
                     exceptional barbering, tattooing, and piercing services. Our journey began as "Clippers," a modest
@@ -64,7 +64,7 @@
         -->
     <div class="container-fluid p-md-5 p-1">
         <div class="row">
-            <div class="col-md-6 fs-4">
+            <div class="col-md-6 fs-4 p-4">
                 <h3 class="text-white text-center fs-2">History Of Inked Clippers</h3>
                 <p class="text-white text-center">In 1965, the visionary artist Mike O'Brien founded "Clippers," a
                     modest barbershop that quickly gained a reputation for excellence in Ennis. Mike's dedication to his
@@ -90,13 +90,13 @@
                     in Ennis.
                 </p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 p-4">
                 <img class="img-fluid rounded float-start" src="{% static 'images/ennis.jpg' %}" alt="Ennis Town">
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <div class=" fs-4 text-center text-white">
+            <div class="col-12 p-4">
+                <div class="fs-4 text-center text-white">
                     <h3 class="fs-2 mt-4">Welcoming and Inclusive</h3>
                     <p class="text-center text-white">
                         we take pride in creating a warm and inclusive environment that embraces diversity and
