Removed secondary colour from profile information

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -16,15 +16,14 @@
                                     alt="User profile image">
                             </div>
                             <div class="col-12 col-md-6 text-white">
-                                <p class="text-white account-heading fw-bold">Username:<span class="text-secondary">
+                                <p class="text-white account-heading fw-bold">Username:<span>
                                         {{ user.username }}</span>
                                 </p>
-                                <p class="text-white fw-bold"> Email: <span
-                                        class="text-secondary">{{ user.email }}</span></p>
-                                <p class="text-white fw-bold">Phone:<span class="text-secondary">
+                                <p class="text-white fw-bold"> Email: <span>{{ user.email }}</span></p>
+                                <p class="text-white fw-bold">Phone:<span>
                                         {{ user.profile.phone }}</span>
                                 </p>
-                                <p class="text-white fw-bold">Location:<span class="text-secondary">
+                                <p class="text-white fw-bold">Location:<span>
                                         {{ user.profile.location }}</span>
                                 </p>
                             </div>
